# recycle_project

map/: map2.pgm  map2.yaml  team2.pgm  team2.yaml
my_yolo_msgs/: CMakeLists.txt  package.xml
my_yolo_msgs/msg/: DetectedObject.msg
src/my_yolo_cpp_pkg/: package.xml  setup.cfg  setup.py
src/my_yolo_cpp_pkg/models/yolo_8n_trained_1_openvino_model/: metadata.yaml  yolo_8n_trained_1.xml
src/my_yolo_cpp_pkg/my_yolo_cpp_pkg/: best_yolo_node.py  brightness_analyzer.py  collect_action_node.py  detected_object_id.py  img_save.py  img_subscribe.py  normalized_img.py  yolo_node.py
src/navigation/: package.xml  setup.py
src/navigation/launch/: navigation.launch.py
src/navigation/navigation/: auto_nav.py  coverage_node.py  nav_utils.py  object_detector.py  recycle.py  waffle_pi.yaml
src/navigation_interface/: CMakeLists.txt  package.xml
src/navigation_interface/action/: RecycleActionMsg.action
src/recycle/: package.xml  setup.cfg  setup.py
src/recycle/recycle/: recycle.py
